# RustFullGRPCExample

./: .gitignore  Cargo.toml  Readme.md  build.rs  clippy.toml  wsl-install.sh
protos/: health.proto  voting.proto
protos/complied/: voting.rs
src/: main.rs
