[package]
name = "votingExample"
version = "0.9.0"
edition = "2021"

[[bin]]
name = "force-build"
path = "build.rs"



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
build_deps = []

[dependencies]
async-stream = "0.3.3"
colored = "2.0.0"
crossbeam = "0.8.2"
crossbeam-channel = "0.5.6"
crossbeam-queue = "0.3.6"
env_logger = "0.9.0"
error-stack = "0.1.1"
lazy_static = "1.4.0"
log = "0.4.17"
log4rs = "1.1.1"
multiqueue = "0.3.2"
prost = "0.11.0"
pub-sub = "2.0.0"
tokio = { version = "1.21.0", features = [ "rt-multi-thread", "time", "fs", "macros", "net",] }
tokio-stream = "0.1.9"
tonic = { version = "0.8.1", features = ["tls", "gzip","transport"] }
tonic-health = "0.7.1"
tonic-reflection = "0.5.0"

[build-dependencies]
tonic-build = {version= "0.8.0", features = ["prost"]}

